--- a/emotion-diary/public/index.html
+++ b/emotion-diary/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="나만의 감정 일기장" />
+    <meta property="og:image" content="%PUBLIC_URL%/thumbnail.png" />
+    <meta property="og:site_name" content="감정 일기장" />
+    <meta property="og:description" ccontent="나만의 작은 감정 일기장" />
+    
     <meta
       name="description"
       content="Web site created using create-react-app"
